@@ -4,7 +4,6 @@ import java.nio.ByteBuffer;
 import java.util.List;
 import java.util.function.Function;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.annotation.ParametersAreNonnullByDefault;
@@ -53,7 +52,7 @@ public class NIBPBytesInterceptorTest {
   private static void testResponse(byte[] input, int[] expected, boolean logFlag) {
     Function<ByteBuffer, Stream<NIBPResponse>> interceptor = new NIBPBytesInterceptor();
     Assert.assertEquals(LogTestUtils.isSubstituteLogLevel(LOGGER, LogUtils.LOG_LEVEL_LEXEMES, () -> {
-      List<NIBPResponse> frames = interceptor.apply(ByteBuffer.wrap(input)).collect(Collectors.toList());
+      List<NIBPResponse> frames = interceptor.apply(ByteBuffer.wrap(input)).toList();
       if (!frames.isEmpty()) {
         frames.get(0).extractPressure(value -> Assert.assertEquals(new int[] {value}, expected));
         frames.get(0).extractData(value -> Assert.assertEquals(value, expected));
